# cv-landing

./: .gitignore  CMakeLists.txt  README.md  design_note.md  pyproject.toml
app/: headless.cpp
benchmark/: perf_main.cpp  robustness_main.cpp  video_main.cpp
config/: camera.yaml
docs/: rvec_to_euler_interactive.html
results/: perf_resolution.csv  robustness_blur.csv  robustness_brightness.csv  robustness_noise.csv  robustness_pitch.csv  robustness_scale.csv  robustness_yaw.csv  video_bench.csv  video_bench_gt.csv  video_bench_pred.csv
scripts/: generate_benchmark_data.py  generate_demo_video.py  generate_test_fixtures.py  live_video_benchmark.py  plot_benchmarks.py  plot_robustness.py
src/: config.cpp  config.hpp
src/detector/: landing_detector.cpp  landing_detector.hpp
src/estimation/: pose_estimator.cpp  pose_estimator.hpp
src/input/: frame_source.cpp  frame_source.hpp
src/output/: visualizer.cpp  visualizer.hpp
tests/: main.cpp  test_detector.cpp  test_frame_source.cpp  test_helpers.hpp  test_integration.cpp  test_pose_estimator.cpp  test_runner.hpp
